k8s/overlays/staging/resources/wings.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wings
spec:
  replicas: 9
w
