k8s/overlays/staging/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pelican
  labels:
    name: pelican
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: &host game.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pelican
            port:
              name: http
  tls:
    - hosts:
        - *host
      secretName: pelican-cert
